sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:5: error: type mismatch;
 found   : Boolean
 required: Int
  while (i!==(l-1)){
          ^AlgGnomeSort:5: error: type mismatch;
 found   : Unit
 required: Boolean
  while (i!==(l-1)){
          ^